--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,4 +1,5 @@
 FROM python:3.7
-RUN git clone https://github.com/adaamko/wikt2def/tree/test
-RUN cd wikt2def
-RUN python service.py
+RUN git clone --branch test https://github.com/adaamko/wikt2def/
+WORKDIR /wikt2def
+RUN pip install -r requirements.txt
+CMD ["python" , "service.py"]
